tests/paczka1/fuzzy1/37311957.err
Error in line 7: 8DsX7E A380 29,3
Error in line 10: 8DsX7E S508 45,5
Error in line 16: cPb1nOyxSW A3Y0 56,4
Error in line 15: zwwzOXc1uv A997 39,1
Error in line 17: zwwzOXc1uv S32 75,5
Error in line 18: uSl S508 199,4
Error in line 29: uSl S32 20,4
Error in line 35: efWznEATrFZ A997 405,6
Error in line 36: efWznEATrFZ S32 23,4
